<resources>
    <string name="app_name">Calc-o-bot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="buttonPlusMinus" translatable="false">+ -</string>
    <string name="buttonMPlus">M+</string>
    <string name="buttonMR">MR</string>
    <string name="buttonMC">MC</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonComma">,</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMultiply">X</string>
    <string name="buttonEdit">Del</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">AC</string>
    <string name="buttonPercent">%</string>
    <string name="divisionZero">Do not divide by Zero!\nEnter new value</string>

</resources>
