<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#607D8B">

    <!-- Display text row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.4">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/displayView"
            android:inputType="numberDecimal"
            android:layout_gravity="center_horizontal"
            android:textSize="60sp"
            android:gravity="bottom|right"
            android:text="@string/button0"
            android:focusable="false"
            android:enabled="false"
            android:background="#455A64"
            android:textColor="@color/lightBlueGray" />
    </LinearLayout>
    <!-- Button row #1 (AC, %, /) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:text="@string/buttonClear"
                android:id="@+id/buttonClear"
                android:onClick="buttonClick"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:background="@color/deepOrange" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonPercent"
                android:id="@+id/buttonPercent"
                android:onClick="buttonClick"
                android:textSize="28sp"
                android:textColor="#212121"
                android:background="@color/white" />

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonDivide"
                android:id="@+id/buttonDivide"
                android:onClick="buttonClick"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:background="#607D8B" />



        </LinearLayout>


    </LinearLayout>

    <!-- Button row #2 (7, 8, 9, X) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button7"
            android:id="@+id/button7"
            android:onClick="buttonClick"
            android:contentDescription="7"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:onClick="buttonClick"
            android:contentDescription="8"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button9"
            android:id="@+id/button9"
            android:onClick="buttonClick"
            android:contentDescription="9"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/buttonMultiply"
            android:id="@+id/buttonMultiply"
            android:onClick="buttonClick"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:background="#607D8B" />

    </LinearLayout>

    <!-- Button row #3 (4, 5, 6, -) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:onClick="buttonClick"
            android:contentDescription="4"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:onClick="buttonClick"
            android:contentDescription="5"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:onClick="buttonClick"
            android:contentDescription="6"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/buttonMinus"
            android:id="@+id/buttonSubtract"
            android:onClick="buttonClick"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:background="#607D8B" />

    </LinearLayout>

    <!-- Button row #4 (1, 2, 3, +) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:onClick="buttonClick"
            android:contentDescription="1"
            android:elegantTextHeight="false"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:onClick="buttonClick"
            android:contentDescription="2"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:onClick="buttonClick"
            android:contentDescription="3"
            android:textSize="28sp"
            android:textColor="#212121"
            android:background="@color/white" />

        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/buttonPlus"
            android:id="@+id/buttonAdd"
            android:onClick="buttonClick"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:background="#607D8B" />

    </LinearLayout>

    <!-- Button row #5 (+-, 0, ,, =) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:text="@string/button0"
                android:id="@+id/button0"
                android:onClick="buttonClick"
                android:contentDescription="0"
                android:textSize="28sp"
                android:textColor="#212121"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:text="@string/buttonComma"
                android:id="@+id/buttonComma"
                android:onClick="buttonClick"
                android:textSize="28sp"
                android:textColor="#212121"
                android:background="@color/white"
                android:contentDescription="-" />

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:text="@string/buttonEquals"
                android:id="@+id/buttonEquals"
                android:onClick="buttonClick"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:background="#607D8B" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
